--- a/TAYLOR_Heather_2_css_042022/style.css
+++ b/TAYLOR_Heather_2_css_042022/style.css
@@ -1,9 +1,3 @@
-/*media query breakpoints
-desktop 992px
-tablette 768px
-mobile <762px 
-*/
-
 /*desktop first*/
 /*Flexbox, pas Grid*/
 /*pixels et pourcentages - pas de REM et EM*/
@@ -22,23 +16,57 @@ body {
   margin: 0;
 }
 
-/* HEADER */
+/* Header */
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 10px 10px 10px 10px;
 }
 
 nav img {
-  margin-left: 20px;
+  /*edit logo image*/
 }
 
 nav ul {
   display: flex;
   list-style: none;
+  justify-content: space-between;
 }
 
 nav li {
-  margin: 0 20px 0 20px;
+  margin: 0 10px 0 10px;
+}
+
+nav li a:link {
+  text-decoration: none;
+}
+
+/* Main */
+
+
+/* Footer */
+
+/*breakpoint desktop: 992px /// 992px & above - all rules outside of media queries*/
+/* 
+Media queries 
+*/
+
+/*
+breakpoint tablette: 768px /// 768px to 991px
+*/
+@media (max-width: 991px) {	
+  nav {
+    flex-direction: column;
+  }
+}
+
+/*
+breakpoint mobile: <768px /// 0px to 767px
+*/
+@media (max-width: 767px) {
+  nav {
+    flex-direction: column;
+  }
 }
