--- a/TAYLOR_Heather_2_css_042022/style.css
+++ b/TAYLOR_Heather_2_css_042022/style.css
@@ -116,7 +116,7 @@ h4 {
 }
 
 p {
-  font-size: 16px;
+  font-size: 14px;
 }
 
 /* Icons */
@@ -268,7 +268,7 @@ form ::placeholder {
   color: white;
 }
 
-.filter-button-text > p {
+.filter-button-text {
   font-size: 18px; /*changes button text size*/
 }
 
@@ -463,7 +463,46 @@ form ::placeholder {
 }
 
 /* Section: Activités à Marseille */
+
+.activities {
+  display: flex;
+  flex-direction: row;
+}
+
+.activities-one-card, .activities-two-cards {
+  flex: 1;
+}
+
 /* Footer */
+
+footer {
+  display: flex;
+  justify-content: flex-start;
+  gap: 15%;
+  background-color: #F2F2F2;
+}
+
+footer div {
+  margin: 2%;
+}
+
+footer div:nth-of-type(1) {
+  
+}
+
+footer p {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+footer ul {
+  list-style-type: none;
+}
+
+footer ul li {
+  margin: 10px 0;
+}
 
 /*breakpoint desktop: 992px /// 992px & above - all rules outside of media queries*/
 /* 
