--- a/TAYLOR_Heather_2_css_042022/style.css
+++ b/TAYLOR_Heather_2_css_042022/style.css
@@ -1,6 +1,3 @@
-/*desktop first*/
-/*Flexbox, pas Grid*/
-/*pixels et pourcentages - pas de REM et EM*/
 * {
     box-sizing: border-box;
     margin: 0;
@@ -90,6 +87,24 @@ main {
   padding: 0px 2%;
 }
 
+main a:link {
+  color: black;
+}
+
+main a:visited {
+ color: black;
+}
+
+main a:hover {
+  color: #0065FC;
+}
+
+main a:active {
+  color: #0065FC;
+  font-style: italic;
+}
+
+
 /* Fonts */
 
 h1 {
@@ -110,13 +125,29 @@ h3 {
 }
 
 h4 {
-  font-weight: normal;
+  font-weight: 500; /*replaced normal*/
   font-size: 14px;
   margin: 0%;
 }
 
 p {
   font-size: 14px;
+  font-weight: 500;
+}
+
+/* Prices */
+
+[data-price] {
+  font-weight: normal;
+}
+
+[data-price^="2"]	{
+  font-weight: bold;
+} /*data-price value begins exactly with the string 2*/
+
+[data-price]:after {
+  content: "€";
+  font-weight: bold;
 }
 
 /* Icons */
@@ -201,7 +232,6 @@ form ::placeholder {
   align-items: center; /*lines word filter up with the button text*/
 }
 
-/*styles the word "filtres*/
 .filter-heading {
   font-weight: 900;
   font-size: 18px;
@@ -300,19 +330,13 @@ form ::placeholder {
 
 .housing-and-popular-section {
   display: flex;
+  gap: 1%;
 }
 
 .housing-section, .popular-section {
   background-color: #F2F2F2;
-  border-radius: 30px;
+  border-radius: 20px; /*was 30px*/
   display: flex;
-  border: 5px white solid;
-}
-
-.popular-section {
-  flex: 1;
-  flex-direction: column;
-  align-items: center;
 }
 
 /* Section: Hébergements à Marseille */
@@ -323,14 +347,14 @@ form ::placeholder {
 }
 
 .housing-heading {
-  padding: 2% 2% 0 2%;
+  padding: 30px 15px 15px 15px;
 }
 
 .housing-cards-container {
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 2%;
+  padding: 0 15px;
 }
 
 .housing-cards {
@@ -338,15 +362,15 @@ form ::placeholder {
   flex-direction: row;
   justify-content: space-between;
   margin: 2% 0 2% 0;
+  gap: 2%;
 }
 
 .card {
   background-color: white;
   border-radius: 15px;
   border: 5px white solid;
-  min-width: 190px;
-  /*height: 155px;*/
   box-shadow: 0px 5px 20px #d9d9d9;
+  flex: 1 0 190px; /*grow, shrink, basis*/
 }
 
 .card a {
@@ -372,23 +396,30 @@ form ::placeholder {
 }
 
 .card-body {
-  padding: 1% 2%;
+  padding: 2%;
   text-align: left;
 }
 
 .show-more {
-  padding: 3%;
+  padding: 30px 15px;
   font-weight: bold;
+  font-size: 18px;
 }
 
 /* Section: Les plus populaires */
+
+.popular-section {
+  flex: 1;
+  flex-direction: column;
+  align-items: stretch; /*default*/
+  justify-content: space-between;
+}
 
 .popular-heading {
   display: flex;
   flex-direction: row;
   align-items: baseline;
-  width: 275px;
-  padding: 5% 0;
+  padding: 30px 15px 15px 15px;
 }
 
 .popular-heading > .fa-star {
@@ -403,15 +434,15 @@ form ::placeholder {
 .popular-cards {
   display: flex;
   flex-direction: column;
-
+  flex-grow: 1;
+  justify-content: space-around;
+  padding: 0 5%; /* adjust to match heading*/
 }
 
 .card-popular {
   background-color: white;
   border-radius: 15px;
   border: 5px white solid;
-  width: 275px;
-  margin: 0 auto 5% auto;
   box-shadow: 0px 5px 20px #d9d9d9;
 }
 
@@ -446,34 +477,117 @@ form ::placeholder {
 
 
 .card-body-popular {
-  padding: 1% 2%;
-  width: 155px;
+  padding: 3% 1% 1% 5%;
+  flex: 1 1 155px;
   display: flex;
   flex-direction: column;
-  
 }
-
-/*.card-body {
-  padding: 1% 2%;
-  text-align: left;
-}*/
 
 .card-body-popular > .card-rating {
   margin-top: auto;
 }
 
+.card-title, .card-subtitle {
+  margin-bottom: 5px;
+}
+
 /* Section: Activités à Marseille */
+
+#activities-section {
+  display: flex;
+  flex-direction: column;
+  margin: 2% 0;
+}
+
+.activities-heading {
+  padding: 30px 0px 15px 0px;
+}
 
 .activities {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
-.activities-one-card, .activities-two-cards {
-  flex: 1;
+.activities-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 400px;
+  width: 23%;
 }
 
-/* Footer */
+/*the article card; container for a */
+.card-activity {
+  display: flex;
+  flex-direction: column;
+}
+
+/*a link, holds both image and text divs*/
+.card-activity-contents {
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+}
+
+/*varying activity card heights -- applied to a tag --
+x-large is applied to both a tag and article tag*/
+.x-large {
+  flex-grow: 1;
+} /*100%*/ /*1, 4*/
+
+.large {
+  height: 220px;
+} /*53%*/ /*2*/ 
+
+
+.medium {
+  height: 196px;
+} /*47%*/ /*6*/
+
+.small {
+  height: 184px;
+} /*44%*/ /*5*/
+
+.x-small {
+  height: 156px;
+} /*37%*/ /*3*/
+
+
+/* parent container for activity image */
+.card-image-activity {
+  overflow: hidden;
+}
+
+.grow {
+  flex-grow: 1;
+} /*compare with .x-large*/
+
+.card-image-activity img {
+  height: 100%;
+  width: 100%;
+  display: block; /*removes default line spacing under image*/
+  object-fit: cover;
+  border-top-left-radius: 20px; 
+  border-top-right-radius: 20px; /*changed from 15px*/
+}
+
+.card-title-activity {
+  background-color: white;
+  min-height: 50px; /*changed from height 40px*/
+  border-bottom: 5px solid transparent;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px; /*changed from 15px*/
+  box-shadow: 0px 5px 20px #d9d9d9;
+  display: flex;
+  align-items: center;
+}
+
+.card-title-activity h3 {
+  padding: 10px;
+}
+
+/********** Footer **********/
 
 footer {
   display: flex;
@@ -486,10 +600,6 @@ footer div {
   margin: 2%;
 }
 
-footer div:nth-of-type(1) {
-  
-}
-
 footer p {
   font-size: 18px;
   font-weight: bold;
@@ -498,25 +608,62 @@ footer p {
 
 footer ul {
   list-style-type: none;
+  padding: 0;
 }
 
 footer ul li {
   margin: 10px 0;
 }
 
-/*breakpoint desktop: 992px /// 992px & above - all rules outside of media queries*/
+footer a:link {
+  text-decoration: none;
+  color: black;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+footer a:visited {
+ color: black;
+}
+
+footer a:hover {
+  color: #0065FC;
+}
+
+footer a:active {
+  color: #0065FC;
+  font-weight: bold;
+}
+
+/*breakpoint desktop: 992px /// 992px & above - 
+all rules outside of media queries*/
+
 /* 
 Media queries 
 */
+
+/*large breakpoint - up to 1920px by 1080px*/
+@media (min-width: 1280px) {
+
+  .housing-cards {
+    margin-top: 0;
+  }
+
+  footer {
+    background-color: blueviolet;
+  }
+}
+
+/*x-small breakpoint for the form*/
+/*@media {
+
+}*/
 
 /*
 breakpoint tablette: 768px /// 768px to 991px
 */
 
 @media (min-width: 768px) and (max-width: 991px) {	
-  /*main {
-    padding: 0px 0px;
-  }*/
 
   .desktop-button {
     display: none;
@@ -552,9 +699,8 @@ breakpoint tablette: 768px /// 768px to 991px
   }
     
   .popular-section {
-    flex: 1;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch; /*changed from center*/
   }
 
   .housing-cards-container {
@@ -610,6 +756,26 @@ breakpoint mobile: <768px /// 0px to 767px
     border-bottom: 3px solid #0065FC;
   }
 
+  main {
+    padding: 0;
+  }
+
+  .search-section {
+    margin-top: 30px;
+  }
+
+  h1 {
+    margin: 0 8px 8px 0;
+  }
+
+  h2 {
+    font-size: 22px;
+  }
+
+  h3 {
+    font-size: 16px;
+  }
+
   .desktop-button {
     display: none;
   }
@@ -632,6 +798,10 @@ breakpoint mobile: <768px /// 0px to 767px
     margin-right: 10px;
     margin-top: 10px;
   }
+
+  .filter-button-text {
+    font-size: 16px;
+  }
   
   .housing-and-popular-section {
     flex-direction: column-reverse;
@@ -641,12 +811,51 @@ breakpoint mobile: <768px /// 0px to 767px
     flex: 1;
     flex-direction: column;
     background-color: white;
+    border: none;
+  }
+
+  .housing-cards-container {
+    padding: 0%;
+  }
+
+  .show-more {
+    padding: 30px 15px 10px 15px;
   }
     
   .popular-section {
-    flex: 1;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch; /*changed from center*/
+    border: none;
+    border-radius: 0;
+  }
+
+  .popular-heading, .housing-heading, .activities-heading {
+    padding: 30px 0px 15px 0px;
+    width: 90%;
+    align-self: center;
+    font-size: 22px;
+  }
+
+  .popular-cards {
+    padding: 0%;
+    width: 100%;
+    align-self: center;
+  }
+
+  .card-popular {
+    width: 90%;
+    margin-bottom: 2%;
+    align-self: center;
+  }
+
+  .card-image-popular {
+    height: 125px;
+    width: 125px;
+  }
+  
+  .card-image-popular img {
+    height: 125px;
+    width: 125px;
   }
 
   .housing-cards {
@@ -658,5 +867,35 @@ breakpoint mobile: <768px /// 0px to 767px
   .card {
     width: 90%;
     margin-bottom: 2%;
+    flex: 0;
+  }
+
+  .card-image {
+    height: 120px;
+  }
+
+  .activities {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .activities-column {
+    min-height: auto;
+    width: 90%;
+  }
+
+  .card-activity {
+    margin-bottom: 5%;
+  }
+
+  .card-activity-contents {
+    height: 210px;
+  }
+
+  footer {
+    flex-direction: column;
+    padding-left: 20px;
   }
 }
